--- a/Week-2/assignment-1/scss/style.css
+++ b/Week-2/assignment-1/scss/style.css
@@ -30,4 +30,69 @@ body {
   background-color: #f7f7f7;
   overflow-x: hidden;
 }
+
+.hero-container {
+  width: 1250px;
+  margin: 0px auto;
+  padding: 40px 0;
+}
+
+.hero-container h1 {
+  font-size: 35px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.hero-container .description {
+  font-size: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.hero-container .article {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  margin: 70px 0 40px 0;
+}
+
+.hero-container .article .box1 {
+  width: 80%;
+}
+
+.hero-container .article .box1 p {
+  font-size: 17px;
+  line-height: 1.3;
+}
+
+.hero-container .article .box1 img {
+  border-radius: 10px;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.hero-container .article .box2 {
+  width: 80%;
+}
+
+.hero-container .article .box2 div:nth-child(1) {
+  margin: 5px 0;
+}
+
+.hero-container .article .box2 div {
+  margin: 25px 0;
+}
+
+.hero-container .article .box2 div h5 {
+  font-size: 20px;
+  line-height: 1.3;
+  margin-bottom: 10px;
+}
+
+.hero-container .article .box2 div p {
+  font-size: 17px;
+  line-height: 1.3;
+}
 /*# sourceMappingURL=style.css.map */
