--- a/Week-2/assignment-1/scss/style.scss
+++ b/Week-2/assignment-1/scss/style.scss
@@ -41,3 +41,65 @@ $base-color: #f7f7f7;
   margin: 0px auto;
   padding: 40px 0;
 }
+
+
+// ====== hero container =======
+.hero-container {
+    @include container-base;
+  
+    h1 {
+      font-size: 35px;
+      margin-top: 20px;
+      text-align: center;
+    }
+  
+    .description {
+      font-size: 20px;
+      margin-top: 20px;
+      text-align: center;
+    }
+  
+    .article {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 10px;
+      margin: 70px 0 40px 0;
+  
+      .box1 {
+        width: 80%;
+        p {
+          font-size: 17px;
+          line-height: 1.3;
+        }
+  
+        img {
+          border-radius: 10px;
+          width: 100%;
+          margin-top: 20px;
+        }
+      }
+  
+      .box2 {
+        width: 80%;
+  
+        div:nth-child(1) {
+          margin: 5px 0;
+        }
+  
+        div {
+          margin: 25px 0;
+          h5 {
+            font-size: 20px;
+            line-height: 1.3;
+            margin-bottom: 10px;
+          }
+  
+          p {
+            font-size: 17px;
+            line-height: 1.3;
+          }
+        }
+      }
+    }
+  }
+  
