--- a/Week-2/assignment-1/scss/style.css
+++ b/Week-2/assignment-1/scss/style.css
@@ -25,28 +25,30 @@ body {
 }
 
 .parent-container .layout-container {
-  width: 1440px;
+  max-width: 1440px;
   margin: 0px auto;
   background-color: #f7f7f7;
   overflow-x: hidden;
 }
 
 .hero-container {
-  width: 1250px;
+  max-width: 1250px;
   margin: 0px auto;
   padding: 40px 0;
 }
 
 .hero-container h1 {
-  font-size: 35px;
+  font-size: 45px;
   margin-top: 20px;
   text-align: center;
+  color: #A55EEA;
 }
 
 .hero-container .description {
   font-size: 20px;
   margin-top: 20px;
   text-align: center;
+  color: #585858;
 }
 
 .hero-container .article {
@@ -63,7 +65,7 @@ body {
 }
 
 .hero-container .article .box1 p {
-  font-size: 17px;
+  font-size: 18px;
   line-height: 1.3;
 }
 
@@ -77,22 +79,117 @@ body {
   width: 80%;
 }
 
-.hero-container .article .box2 div:nth-child(1) {
-  margin: 5px 0;
+.hero-container .article .box2 article:nth-child(1) {
+  margin: 0px 0;
 }
 
-.hero-container .article .box2 div {
+.hero-container .article .box2 article {
   margin: 25px 0;
 }
 
-.hero-container .article .box2 div h5 {
+.hero-container .article .box2 article h5 {
+  color: #343434;
   font-size: 20px;
   line-height: 1.3;
   margin-bottom: 10px;
 }
 
-.hero-container .article .box2 div p {
+.hero-container .article .box2 article p {
   font-size: 17px;
   line-height: 1.3;
+}
+
+.hero-container .article .box2 article a {
+  display: inline-block;
+  margin-top: 7px;
+}
+
+.form-container {
+  max-width: 1250px;
+  margin: 0px auto;
+  padding: 40px 0;
+}
+
+.form-container form label:nth-child(1) span {
+  margin-left: 25px;
+}
+
+.form-container form label {
+  display: block;
+  margin: 19px 0;
+  font-size: 16px;
+}
+
+.form-container form label input[type="text"],
+.form-container form label input[type="password"],
+.form-container form label input[type="email"] {
+  display: inline-block;
+  margin-left: 10px;
+  border: 2px solid #A55EEA;
+  width: 200px;
+  height: 25px;
+  border-radius: 5px;
+}
+
+.form-container form label input[type="radio"] {
+  display: inline-block;
+  margin-left: 0px;
+  border: 2px solid #A55EEA;
+  width: 20px;
+  height: 15px;
+}
+
+.form-container form label input[type="checkbox"] {
+  display: inline-block;
+  margin-left: 10px;
+  border: 2px solid #A55EEA;
+  width: 20px;
+  height: 15px;
+}
+
+.form-container form input[type="submit"] {
+  display: inline-block;
+  margin-top: 20px;
+  width: 190px;
+  height: 43px;
+  background-color: #A55EEA;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-family: "League Spartan";
+  font-size: 19px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.form-container form input[type="submit"]:hover {
+  background-color: #952bff;
+  -webkit-box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+.footer-container {
+  width: 100vw;
+  background-color: #A55EEA;
+  overflow-x: hidden;
+}
+
+.footer-container .footer-layout {
+  width: 1440px;
+  margin: 0px auto;
+  background-color: #A55EEA;
+}
+
+.footer-container .footer-box {
+  max-width: 1250px;
+  margin: 0px auto;
+  padding: 40px 0;
+  background-color: #A55EEA;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  place-items: center;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
