--- a/Week-2/assignment-1/scss/style.scss
+++ b/Week-2/assignment-1/scss/style.scss
@@ -28,7 +28,7 @@ $base-color: #f7f7f7;
   overflow-x: hidden;
 
   .layout-container {
-    width: 1440px;
+    max-width: 1440px;
     margin: 0px auto;
     background-color: $base-color;
     overflow-x: hidden;
@@ -37,7 +37,7 @@ $base-color: #f7f7f7;
 
 // ====== Mixins =======
 @mixin container-base {
-  width: 1250px;
+  max-width: 1250px;
   margin: 0px auto;
   padding: 40px 0;
 }
@@ -48,15 +48,17 @@ $base-color: #f7f7f7;
     @include container-base;
   
     h1 {
-      font-size: 35px;
+      font-size: 45px;
       margin-top: 20px;
       text-align: center;
+      color: #A55EEA;
     }
   
     .description {
       font-size: 20px;
       margin-top: 20px;
       text-align: center;
+      color: #585858;
     }
   
     .article {
@@ -68,7 +70,7 @@ $base-color: #f7f7f7;
       .box1 {
         width: 80%;
         p {
-          font-size: 17px;
+          font-size: 18px;
           line-height: 1.3;
         }
   
@@ -82,13 +84,14 @@ $base-color: #f7f7f7;
       .box2 {
         width: 80%;
   
-        div:nth-child(1) {
-          margin: 5px 0;
+        article:nth-child(1) {
+          margin: 0px 0;
         }
   
-        div {
+        article {
           margin: 25px 0;
           h5 {
+            color: #343434;
             font-size: 20px;
             line-height: 1.3;
             margin-bottom: 10px;
@@ -98,8 +101,105 @@ $base-color: #f7f7f7;
             font-size: 17px;
             line-height: 1.3;
           }
+
+          a{
+            display: inline-block;
+            margin-top: 7px;
+          }
         }
       }
     }
   }
   
+  // ======== form-container ============
+.form-container {
+    @include container-base;
+  
+    form {
+      label:nth-child(1) {
+        span {
+          margin-left: 25px;
+        }
+      }
+  
+      label {
+        display: block;
+        margin: 19px 0;
+        font-size: 16px;
+  
+        input[type="text"],
+        input[type="password"],
+        input[type="email"] {
+          display: inline-block;
+          margin-left: 10px;
+          border: 2px solid #A55EEA;
+          width: 200px;
+          height: 25px;
+          border-radius: 5px;
+        }
+  
+        input[type="radio"] {
+          display: inline-block;
+          margin-left: 0px;
+          border: 2px solid #A55EEA;
+          width: 20px;
+          height: 15px;
+        }
+  
+        input[type="checkbox"] {
+          display: inline-block;
+          margin-left: 10px;
+          border: 2px solid #A55EEA;
+          width: 20px;
+          height: 15px;
+        }
+      }
+  
+      input[type="submit"] {
+        display: inline-block;
+        margin-top: 20px;
+        width: 190px;
+        height: 43px;
+        background-color: #A55EEA;
+        border: none;
+        border-radius: 4px;
+        color: #fff;
+        font-family: "League Spartan";
+        font-size: 19px;
+        margin-top: 20px;
+        cursor: pointer;
+
+        &:hover{
+            background-color: #952bff;
+            box-shadow: 2px 3px 10px rgba(0,0,0, 0.2)
+        }
+      }
+    }
+  }
+  
+  .footer-container {
+    width: 100vw;
+    background-color: #A55EEA;
+    overflow-x: hidden;
+  
+    .footer-layout {
+      width: 1440px;
+      margin: 0px auto;
+      background-color: #A55EEA;
+    }
+  
+    .footer-box {
+      @include container-base;
+  
+      background-color: #A55EEA;
+      display: grid;
+      grid-template-columns:  1fr 1fr;
+      place-items: center;
+      color: #fff;
+    }
+  }
+  
+
+  @media screen {
+    
+  }
