Initial commit - assignment2

--- a/Week-2/assignment-1/scss/style.scss
+++ b/Week-2/assignment-1/scss/style.scss
@@ -17,7 +17,7 @@ body {
 }
 
 // variables
-$text-color: #fff5e6;
+$text-color: #000;
 $base-color: #f7f7f7;
 
 /* ============ parent & layout ============ */
