--- a/Week-2/assignment-2/scss/style.scss
+++ b/Week-2/assignment-2/scss/style.scss
@@ -52,5 +52,54 @@ $base-color: #f7f7f7;
       left: 0;
     }
 
+    .one {
+      background-color: orangered;
+      transform: rotate(0deg);
+      transform-origin: top left;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .two {
+      background-color: yellow;
+      transform: rotate(0deg);
+      transform-origin: top right;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .three {
+      background-color: #4d4dff;
+      transition: transform 0.5s ease-in-out;
+      transform: rotate(0deg);
+      transform-origin: bottom left;
+    }
+
+    .four {
+      background-color: greenyellow;
+      transition: transform 0.5s ease-in-out;
+      transform: rotate(0deg);
+      transform-origin: bottom right;
+    }
+
+    &:hover {
+      .one {
+        transform: rotate(90deg);
+        transform-origin: top left;
+      }
+
+      .two {
+        transform: rotate(-90deg);
+        transform-origin: top right;
+      }
+
+      .three {
+        transform: rotate(-90deg);
+        transform-origin: bottom left;
+      }
+
+      .four {
+        transform: rotate(90deg);
+        transform-origin: bottom right;
+      }
+    }
   }
 }
