--- a/Week-12/todo/src/App.css
+++ b/Week-12/todo/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -5,7 +7,7 @@
 }
 
 html {
-  font-family: Poppins;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -22,9 +24,9 @@ body {
 }
 
 .layout_container {
-  max-width: 1440px;
+  max-width: 1340px;
   margin: 0 auto;
-  min-height: 80vh;
+  min-height: 100%;
   background-color: #ffffff;
   overflow-x: none;
 }
